--- a/soundmates/pubspec.yaml
+++ b/soundmates/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_typeahead: ^3.2.2
 
   english_words: ^4.0.0
   provider: ^6.0.0
