--- a/soundmates/pubspec.yaml
+++ b/soundmates/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_typeahead: ^3.2.2
+  flutter_secure_storage: ^5.0.2
+  shared_preferences: ^2.0.15
 
   english_words: ^4.0.0
   provider: ^6.0.0
@@ -19,6 +21,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  http: ^0.13.3
 
   flutter_lints: ^2.0.0
 
