--- a/soundmates/pubspec.yaml
+++ b/soundmates/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_typeahead: ^3.2.2
   flutter_secure_storage: ^5.0.2
   shared_preferences: ^2.0.15
+  image_picker: ^0.8.4+4
 
   english_words: ^4.0.0
   provider: ^6.0.0
