--- a/soundmates/pubspec.yaml
+++ b/soundmates/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   shared_preferences: ^2.0.15
   image_picker: ^0.8.4+4
+  geolocator: ^8.0.0
 
   english_words: ^4.0.0
   provider: ^6.0.0
