--- a/soundmates/pubspec.yaml
+++ b/soundmates/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   shared_preferences: ^2.0.15
   image_picker: ^0.8.4+4
   geolocator: ^8.0.0
-
+  oauth2_client: ^2.4.2
   english_words: ^4.0.0
   provider: ^6.0.0
 
