--- a/soundmates/pubspec.yaml
+++ b/soundmates/pubspec.yaml
@@ -26,10 +26,20 @@ dev_dependencies:
   http: ^0.13.3
 
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.0
+
 
 flutter:
   assets:
     - assets/images/
     - assets/icons/
   uses-material-design: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"
+
+
+
 
