--- a/soundmates/pubspec.yaml
+++ b/soundmates/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   oauth2_client: ^2.4.2
   english_words: ^4.0.0
   provider: ^6.0.0
+  flutter_sound: ^8.4.0
+  permission_handler: ^10.2.0
+  path_provider: ^2.0.5
+  http_parser: ^4.0.0
 
 dev_dependencies:
   flutter_test:
